tests/baselines/reference/unusedPrivateVariableInClass1.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass1.ts(2,13): error TS6133: 'x' is declared but never used.


==== tests/cases/compiler/unusedPrivateVariableInClass1.ts (1 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS6133: 'x' is declared but never used.
    }